releaseinfo/r5.0/releasenotes/rst/supported-platforms-50-vnc.rst

=======================================
Supported Platforms Tungsten Fabric 5.0
=======================================

`Table 1`_ lists the orchestrator releases and the corresponding operating systems and kernel versions supported by Tungsten Fabric Release 5.0.

.. _Table 1: 

*Table 1* : Supported Platforms

	+------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	| Tungsten Fabric Release      | Orchestrator Release | Deployment Tool | Operating System, Kernel, and Key components version                        |
	+==============================+======================+=================+=============================================================================+
	| Tungsten Fabric Release 5.0  | Kubernetes 1.9.5     | Ansible         | - CentOS 7.4—Linux Kernel Version 3.10.0-693.21.1 Docker version: 17.03.1-ce|
	+------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	|                              | Openshift 3.7        | Ansible         | - CentOS 7.4—Linux Kernel Version 3.10.0-693.21.1                           |
	|                              |                      |                 |   Ansible version: 2.5.1 Docker version: 1.12.6                             |
	+------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	|                              | OpenStack Ocata      | Ansible         | - CentOS 7.4—Linux Kernel Version 3.10.0-693.21.1                           |
	|                              |                      |                 |   Ansible version: 2.4.2 Docker version: 17.03.1-ce                         |
	|                              |                      +-----------------+-----------------------------------------------------------------------------+
	|                              |                      | Helm            | - Ubuntu 16.04.3—Linux Kernel Version 4.4.0-87                              |
	|                              |                      |                 |   Docker version: 1.13.1 Helm version: 2.7.2 Kubernetes version: 1.9.3      |
	+------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	|                              | VMware vCenter 6.5   | Ansible         | - ESX version 6.5 CentOS VM version running vRouter:                        |
	|                              |                      |                 |   CentOS 7.4—Linux Kernel Version 3.10.0-693.21.1                           |
	+------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
