releaseinfo/r5.0.1/releasenotes/rst/supported-platforms-50-vnc.rst
.. This work is licensed under the Creative Commons Attribution 4.0 International License.
   To view a copy of this license, visit http://creativecommons.org/licenses/by/4.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.

=========================================
Supported Platforms Tungsten Fabric 5.0.1
=========================================

`Table 2`_ lists the orchestrator releases and the corresponding operating systems and kernel versions supported by Tungsten Fabric Release 5.0.1.

.. _Table 2:

*Table 2* : Supported Platforms

	+--------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	| Tungsten Fabric Release        | Orchestrator Release | Deployment Tool | Operating System, Kernel, and Key components version                        |
	+================================+======================+=================+=============================================================================+
	| Tungsten Fabric Release 5.0.1  | Kubernetes 1.9.2     | Ansible         | - CentOS 7.5—Linux Kernel Version 3.10.0-862.11.6 Docker version: 18.06.0-ce|
	+--------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	|                                | Openshift 3.9        | Ansible         | - CentOS 7.5—Linux Kernel Version 3.10.0-862.11.6                           |
	|                                |                      |                 |   Ansible version: 2.5.7 Docker version: 1.13.1                             |
	+--------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	|                                | OpenStack Queens     | Ansible         | - CentOS 7.5—Linux Kernel Version 3.10.0-862.11.6                           |
	|                                |                      |                 |   Ansible version: 2.4.2 Docker version: 18.06.0-ce                         |
	+--------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	|                                | OpenStack Ocata      | Ansible         | - CentOS 7.5—Linux Kernel Version 3.10.0-862.11.6                           |
	|                                |                      |                 |   Ansible version: 2.4.2 Docker version: 18.06.0-ce                         |
	|                                |                      +-----------------+-----------------------------------------------------------------------------+
	|                                |                      | Helm            | - Ubuntu 16.04.3—Linux Kernel Version 4.4.0-112-generic                     |
	|                                |                      |                 |   Docker version: 17.03.2-ce Helm version: 2.7.2 Kubernetes version: 1.9.3  |
	+--------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	|                                | RedHatOpenStack      | RHOSP 13        | - RHEL7.5—Linux Kernel Version                                              |
	|                                | Platform 13          | director        |                                                                             |
	+--------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
	|                                | VMware vCenter 6.5   | Ansible         | - ESX version 6.5 CentOS VM version running vRouter:                        |
	|                                |                      |                 |   CentOS 7.5—Linux Kernel Version 3.10.0-862.9.1                            |
	+--------------------------------+----------------------+-----------------+-----------------------------------------------------------------------------+
